fix: Too wide of a viewport, overlapping

--- a/src/components/EventMarker.module.css
+++ b/src/components/EventMarker.module.css
@@ -16,7 +16,7 @@
         stroke-opacity: 0.75;  
     }
     to {
-        stroke-width: 200;
+        stroke-width: 100;
         stroke-opacity: 0;  
     }
 }
